# nulltrace

./: .gitignore  Makefile  WALLET_BUSINESS_RULES.md
nulltrace-admin/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
nulltrace-admin/src-tauri/capabilities/: default.json
nulltrace-admin/src-tauri/src/: grpc.rs  lib.rs  main.rs
nulltrace-client/src-tauri/: Cargo.toml  build.rs  ntml_tailwind.css  tauri.conf.json
nulltrace-client/src-tauri/capabilities/: default.json
nulltrace-client/src-tauri/icons/: icon.icns
nulltrace-client/src-tauri/src/: grpc.rs  lib.rs  main.rs  ntml_html.rs  ntml_runtime.rs
nulltrace-core/: Cargo.toml  build.rs  docker-compose.yml
nulltrace-core/.cargo/: config.toml
nulltrace-core/.sqlx/: query-01392acad5b201cbfeae681f2d1444b0b9ad3af5263f147d326ad51b37f614b6.json  query-3eac370e3cfd5bd2abbea1765e172ba22aa15965c1c2681ee1659eb236851375.json  query-567e8f501903c2f984494e97e4e653b327c63c68788162dab2b6d90f7b42a1f1.json  query-68caf087f74a24125ed575a078990fc2a3863d55774c40edf5e7aadcebceeeea.json  query-791dfc20cebe8531f913a7d369ca51bd9ad22c80cabb70c3f659238279efa66a.json  query-8c430b9702d29c44edc7f8e71ad9d5990db5da3487d009fef1d7102aa51f4ea1.json  query-921e9349f6eca95e608d0c0338b708f294d20e87f930a1298bad33121211839d.json  query-959832f99b9d086778493e2c53cdbec00b1080544d7eb40f0259344e3552ab12.json  query-bfda4d868c7a39681286207369c630517cb4ba5535b51b7f8e4fbf9c493511e2.json  query-c5343249788302618517896255cec890635266e2fc5112658e69da512787159a.json  query-ee8363b98dca41f982ba8dfb0d03cb698a3218fbb462b4b035000daded6a4141.json
nulltrace-core/docs/: README.md  blob-store.md  game-loop.md  grpc-integration.md  http-protocol.md  lua-examples.md  networking.md  nexus-http-server-and-bootstrap.md  os.md  process.md  server.md  vm-manager.md  vm.md
nulltrace-core/migrations/: 001_create_vms.sql  002_create_fs_nodes.sql  003_create_fs_contents.sql  004_add_dns_name.sql  005_create_vm_users.sql  006_create_players.sql  007_content_addressable_blobs.sql  008_drop_fs_contents_data.sql  009_add_player_points.sql  010_create_factions.sql  011_add_player_preferred_theme.sql  012_create_player_shortcuts.sql  013_create_emails.sql  014_create_email_accounts.sql  015_add_emails_cc_address.sql  016_create_fkebank_accounts.sql  016_create_wallet_accounts.sql  017_create_fkebank_tokens.sql  017_create_wallet_keys.sql  018_create_crypto_wallets.sql  018_create_wallet_transactions.sql  019_create_wallet_cards.sql  019_create_wallet_transactions_keybased.sql  020_create_wallet_card_transactions.sql  020_create_wallet_cards.sql  021_create_wallet_card_statements.sql  021_create_wallet_card_transactions.sql  022_create_wallet_card_statements.sql  023_add_npc_owner_type.sql  024_create_card_invoices.sql  025_fix_card_limit_zero.sql  026_create_player_credit_accounts.sql  027_shared_credit_limit.sql  028_create_codelab_progress.sql  029_add_vm_internet_plan.sql  030_create_admins.sql  031_create_feed_posts.sql  032_add_player_hackerboard_language_prefs.sql  033_create_faction_invites.sql  034_hackerboard_direct_messages.sql  (+5 more)
nulltrace-core/ntml_site/: best-practices.ntml  components.ntml  lua-api.ntml  styling.ntml
nulltrace-core/proto/: admin.proto  game.proto
nulltrace-core/sites/: README.md
nulltrace-core/sites/ntml.org/: config.yaml
nulltrace-core/sites/sudoku.null/: config.yaml
nulltrace-core/src/: main.rs
nulltrace-core/src/cluster/: admin_auth.rs  admin_grpc.rs  auth.rs  bench_scripts.rs  bin_programs.rs  browser_process_hub.rs  cluster_snapshot.rs  file_search.rs  grpc.rs  incoming_money_listener.rs  mailbox_hub.rs  main.rs  os.rs  path_util.rs  pixel_art_binary.rs  pixel_art_png.rs  process.rs  process_parser.rs  process_run_hub.rs  process_spy_hub.rs  resource_limits.rs  sites.rs  terminal_hub.rs  vm.rs  vm_manager.rs  vm_upgrade_catalog.rs  vm_worker.rs
nulltrace-core/tests/: client_test.rs
nulltrace-ntml/: Cargo.toml  INTEGRATION.md  README.md  TESTING.md
nulltrace-ntml/docs/: BEST_PRACTICES.md  SPECIFICATION.md  TAILWIND_IMPLEMENTATION.md
nulltrace-ntml/examples/: full-featured-page.ntml  game-hud.ntml  invalid-color.ntml  invalid-component.ntml  invalid-missing-property.ntml  mission-briefing.ntml  page-with-head.ntml  terminal-ui.ntml  valid-complex.ntml  valid-simple.ntml
nulltrace-ntml/src/: component_file.rs  components.rs  document.rs  error.rs  head.rs  lib.rs  parser.rs  style.rs  theme.rs  validator.rs
nulltrace-ntml/tests/: ntml_tests.rs
plans/: devtools.md  (+2 more)
(+347 files in other folders)
