[package]
name = "nulltrace-core"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "stress"
path = "src/main.rs"

[[bin]]
name = "cluster"
path = "src/cluster/main.rs"

[[bin]]
name = "server"
path = "src/server/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
mlua = { version = "0.11.1", features = ["async", "serialize", "luau"] }
uuid = { version = "1", features = ["v4"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
sysinfo = "0.29"
dashmap = "5"
tonic = "0.9"
tonic-web = "0.9"
tokio-stream = "0.1"
prost = "0.11"
redis = "0.23"
sha2 = "0.10"
jsonwebtoken = { version = "10.3", default-features = false, features = ["rust_crypto"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
num_cpus = "1.16"

[build-dependencies]
tonic-build = "0.9"
