[package]
name = "nulltrace-admin"
version = "0.1.0"
description = "Nulltrace admin management client"
authors = ["you"]
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "2", features = [] }
tonic-build = "0.9"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
prost = "0.11"
tonic = "0.9"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
