[package]
name = "nulltrace-client"
version = "0.1.0"
description = "Nulltrace game client - Linux-style desktop UI"
authors = ["you"]
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "2", features = [] }
tonic-build = "0.9"

[dependencies]
dashmap = "5"
nulltrace-ntml = { path = "../../nulltrace-ntml" }
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
mlua = { version = "0.11.1", features = ["luau", "send"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pulldown-cmark = "0.9"
syntect = "5"
prost = "0.11"
tonic = "0.9"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
tokio-stream = "0.1"
uuid = { version = "1", features = ["v4"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
